Divided views into public activities and internal activities

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "adriansb3105/AsociacionIntegralAdrianSerranoSemestreIIIAnno2016",
-    "description": "Test",
+    "description": "Project for the management of the Guadalupe Community Association ",
     "version": "0.0.1",
     "homepage": "https://guadalupe-community.herokuapp.com/",
     "license": "MIT",
